--- a/views/index.jade
+++ b/views/index.jade
@@ -24,18 +24,37 @@ block content
 					li
 						a(href="#").
 							Photo Gallery
-					li
-						a(href="#").
-							Products
 					li.dropdown
 						a.dropdown-toggle(data-toggle="dropdown")
-							|Dropdown 
+							|Products 
 							b.caret
 						ul.dropdown-menu
 							li 
-								a(href="#") Action
+								a(href="#") Hessian Cloth
 							li 
-								a(href="#") Another Action
+								a(href="#") Hessain Bag
+							li 
+								a(href="#") Sand Bag
+							li 
+								a(href="#") Jute Tape
+							li 
+								a(href="#") Hessain Sheet / Tobacco Sheet
+							li 
+								a(href="#") Geo-Jute / Soil Saver
+							li 
+								a(href="#") Jute Caddies
+							li 
+								a(href="#") Sacking
+							li 
+								a(href="#") Carpet Backing Cloth
+							li 
+								a(href="#") Jute Yarn / Twine
+							li 
+								a(href="#") Raw Jute
+							li 
+								a(href="#") Jute Rope
+							li 
+								a(href="#") Jute Felt
 					li
 						a( href = "#" data-toggle = "modal" data-target = "#sign-modal").
 							Sign in
