--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,8 @@ block content
 					|Monami Impex
 
 
-			.navbar-collapse.collapse.navbar-responsive-collapse
-				ul.nav.navbar-nav.pull-right
+			.navbar-collapse.collapse.navbar-responsive-collapse#nvcollapse
+				ul.nav.navbar-nav.navbar-right
 					li.active 
 						a(href="/") Home
 					li
