--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	div.navbar.navbar-default
+	div.navbar.navbar-inverse.navbar-fixed-top
 		.container
 			.navbar-header
 				button.navbar-toggle.collapsed(type = "button" data-toggle="collapse" data-target= "#nvcollapse")
@@ -89,14 +89,38 @@ block content
 							Close
 						
 
+	br
+	br
+	br
+	br
+
 	.container
 		.jumbotron
-			h1. 
-				Welcome to Monami Impex Ltd.
-			p.
-				All sorts of jute goods manufacturer &amp; exporter
-			a(href="#").btn.btn-primary.btn-lg.
-					Learn More
-		
 
+			h1.text-center.
+				Welcome to Monami Impex Ltd.
+			p.text-center.
+				All sorts of jute goods manufacturer &amp; exporter
+			div.text-center
+				a(href="#").btn.btn-primary.btn-lg.
+						Learn More
+		br
+		
+		.card.col-lg-4.left
+			h1.text-center
+				|Come On
+			p.text-center
+				|This is really weird. I messed everything like crazy.
+		.card.col-lg-4.middle
+			h1.text-center
+				|Come On
+			p.text-center
+				|This is really weird. I messed everything like crazy.
+		.card.col-lg-4.right
+			h1.text-center
+				|Come On
+			p.text-center
+				|This is really weird. I messed everything like crazy.
+
+				
 
