--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block content
 					li.active 
 						a(href="/") Home
 					li
-						a(href="#"). 
+						a(href="/companyprofile"). 
 							Company Profile
 					li
 						a(href="#").
