Contact Us Page added, minor style twitched

--- a/views/companyprofile.jade
+++ b/views/companyprofile.jade
@@ -56,6 +56,9 @@ block content
 							li 
 								a(href="#") Jute Felt
 					li
+						a(href = "/contactus").
+							Contact Us
+					li
 						a( href = "#" data-toggle = "modal" data-target = "#sign-modal").
 							Sign in
 	.container
@@ -65,7 +68,7 @@ block content
 					.modal-header
 						button.close(type="button" class="close" data-dismiss="modal").
 							x
-						h4.modal-title.
+						h4.modal-title(style="color:brown").
 							Sign in
 					.modal-body
 						form.form-horizontal
@@ -93,7 +96,7 @@ block content
 	br
 
 	.container.cardblock
-		h2.text-center.
+		h2.text-center(style="color:brown;").
 			Welcome to Monami Impex
 		br
 
@@ -118,7 +121,7 @@ block content
 		p.text-justify.pblock.
 			We are just a "CALL" distance. You just name it, we will be there to help you with your products.
 
-		h2.text-right.pblock.
+		h2.text-right.pblock(style="color:brown").
 			Syed Jahangir Hossain
 		.text-right.small.pblock.
 			Managing Director
