Gallery Added and Glyph Fix

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -1,2 +1,6 @@
-//= require monami.css
+//= require bootstrap.css
 //= require bootswatch.css
+//= require bootstrap.css.map
+//= require blueimp-gallery.min.css
+//= require bootstrap-image-gallery.min.css
+//= require monami.css
