--- a/assets/css/monami.css
+++ b/assets/css/monami.css
@@ -14,18 +14,40 @@ body{
 
 .cardblock{
 	background-color: #f8f5f0 ;
-	padding-left: 20% ;
-	padding-right: 20% ;
+	padding-left: 2% ;
+	padding-right: 2% ;
 	padding-bottom: 5%;
-} 
+}
 
 .pblock{
-	padding-left: 8% ;
-	padding-right: 8% ;
+	padding-left: .8% ;
+	padding-right: .8% ;
 	font-size: 1.25em;
 
 }
 
 .sidebar{
-	margin-bottom: 20px;	
+	margin-bottom: 20px;
+}
+
+#pgallery .grid-sizer { width: 120px; background-color: white; }
+#pgallery .item { width: 20%; background-color: white;}
+#pgallery .item.w2 { width: 40%; background-color: }
+
+.item img , .grid-sizer img , .item.w2 img{
+	max-width: 100%;
+	max-height: 100%;
+}
+
+
+.imgblock {
+	padding : 3px ;
+
+	background-color : white ;
+	float : left;
+	margin: 2px ;
+}
+
+.imgblock a img{
+	width : 350px ;
 }
