Signed-off-by: Arman Kamal <arman1790@gmail.com>

--- a/views/index.jade
+++ b/views/index.jade
@@ -31,4 +31,16 @@ html(lang = "en")
 	body.no-trans
 		.scrollToTop
 			i.icon-up-open-big
-		
+
+
+		// header start
+
+		header.header.fixed.clearfix.navbar.navbar-fixed-top
+			.container
+				.row
+					.col-md-4
+						// header left start
+						.header-left.clearfix
+							.logo.smooth-scroll
+								a(href="#")
+									img#logo(src = "images/logo.png" alt = "mMnami")
