--- a/views/index.jade
+++ b/views/index.jade
@@ -9,24 +9,7 @@ html(lang = "en")
 
 		//  Mobile Viewport
 		meta(name = "viewport" content="width=device-width, initial-scale=1.0")
-		link(rel = "shortcut icon" href = "images/favicon.ico")
-
-		// Web fonts
-		link( href = "http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext" rel = "stylesheet" type = "text/css")
-		link( href = "http://fonts.googleapis.com/css?family=Raleway:700,400,300" rel = "stylesheet" type = "text/css")
-
-		// Bootstrap Core CSS
-		link( href = "bootstrap/css/bootstrap.css" rel = "stylesheet")
-		
-		// Font Awesome CSS
-		link( href = "fonts/font-awesome/css/font-awesome.css" rel = "stylesheet")
-
-		// Plugins
-		link( href = "css/animations.css" rel = "stylesheet")
-
-		// Extra CSS
-		link( href = "css/style.css" rel = "stylesheet")
-		link( href = "css/custom.css" rel = "stylesheet")
+		include ./head.jade
 
 	body.no-trans
 		.scrollToTop
@@ -35,12 +18,19 @@ html(lang = "en")
 
 		// header start
 
-		header.header.fixed.clearfix.navbar.navbar-fixed-top
-			.container
-				.row
-					.col-md-4
-						// header left start
-						.header-left.clearfix
-							.logo.smooth-scroll
-								a(href="#")
-									img#logo(src = "images/logo.png" alt = "mMnami")
+		include ./header.jade
+
+		// banner start
+
+		include ./banner.jade
+
+		// about start
+
+		include ./about.jade
+
+
+
+
+
+
+	include ./footer.jade
