--- a/views/header.jade
+++ b/views/header.jade
@@ -47,9 +47,9 @@ header.header.fixed.clearfix.navbar.navbar-fixed-top
 										li
 											a(href = "#about") About
 										li
-											a(href = "#Portfolio") Portfolio
+											a(href = "#portfolio") Portfolio
 										li
-											a(href = "contact") Contact Us
+											a(href = "#contact") Contact Us
 						
 						// navbar end
 					//main navigation end
