--- a/views/index.jade
+++ b/views/index.jade
@@ -32,6 +32,14 @@ html(lang = "en")
 
 		include ./worktogether.jade
 
+		// Portfolio start
+
+		include ./portfolio.jade
+
+		// footer start
+
+		footer#footer
+			include ./contactus.jade
 
 
 
