--- a/views/Portfolio/portfolio-3.jade
+++ b/views/Portfolio/portfolio-3.jade
@@ -24,7 +24,7 @@
 							p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde. Quae sed, incidunt laudantium nesciunt, optio corporis quod earum pariatur omnis illo saepe numquam suscipit, nemo placeat dignissimos eius mollitia et quas officia doloremque ipsum labore rem deserunt vero! Magnam totam delectus accusantium voluptas et, tempora quos atque, fugiat, obcaecati voluptatibus commodi illo voluptates dolore nemo quo soluta quis.
 							p Molestiae sed enim laboriosam atque delectus voluptates rerum nostrum sapiente obcaecati molestias quasi optio exercitationem, voluptate quis consequatur libero incidunt, in, quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nobis officiis, autem earum tenetur quidem. Quae non dicta earum. Ipsum autem eaque cum dolor placeat corporis quisquam dolorum at nesciunt.
 						.col-md-6
-							img(src = "images/prtfolio-3.jpg" alt = "")
+							img(src = "images/portfolio-3.jpg" alt = "")
 
 				.modal-footer
 					button.btn.btn-sm.btn-default(type = "button" data-dismiss = "modal") Close
