--- a/views/contactus.jade
+++ b/views/contactus.jade
@@ -67,7 +67,7 @@
 						.form-group.has-feedback
 							label.sr-only(for = "email") Email Address
 							input.form-control#name2(type = "text" name = "email" placeholder = "Email Address" required)
-							i.fa.fa-users.form-control-feedback
+							i.fa.fa-envelope.form-control-feedback
 
 						.form-group.has-feedback
 							label.sr-only(for = "subject") Subject
